--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
   "flatten-dict==0.4.2",
   "gymnasium==0.29.1",
   "httpx==0.27.2",
+  "imageio[ffmpeg]>=2.31.0",
   "json-tricks==3.17.1",
   "matplotlib==3.7.0",
   "numpy==1.26.4",
@@ -35,6 +36,7 @@ dependencies = [
   "openai==1.55.3",
   "pandas==1.5.3",
   "PettingZoo==1.24.1",
+  "Pillow>=10.0.0",
   "posix-ipc==1.1.1; platform_system != 'Windows'",
   "progressbar2==4.2.0",
   "psutil==5.9.4",
