--- a/aintelope/config/default_config.yaml
+++ b/aintelope/config/default_config.yaml
@@ -7,10 +7,11 @@
 
 timestamp: ${now:%Y%m%d%H%M%S}      
 experiment_name: experiment
-outputs_dir: outputs
-log_dir: ${outputs_dir}/${timestamp}/
-checkpoint_dir: checkpoints
-tensorboard_dir: null #tensorboard if you want to have this later
+outputs_dir: outputs/${timestamp}/
+#outputs_dir: outputs
+#log_dir: outputs/${timestamp}/
+#checkpoint_dir: checkpoints
+#tensorboard_dir: null #tensorboard if you want to have this later
 
 trainer_params:
   num_workers: 1        # unused        # TODO
