--- a/aintelope/config/default_config.yaml
+++ b/aintelope/config/default_config.yaml
@@ -8,7 +8,7 @@
 run:
   outputs_dir: outputs/${now:%Y%m%d%H%M%S}/
   seed: 0                          # @ui int 0 9999
-  concurrent: False                # @ui bool
+  max_workers: 0                   # @ui bool
   event_columns: [
     Run_id, Trial, Episode, Env layout seed, Step, IsTest,
     Agent_id, State, Action, Reward, Done, Next_state, Observation]
