--- a/aintelope/config/default_config.yaml
+++ b/aintelope/config/default_config.yaml
@@ -20,19 +20,18 @@ run:
 agent_params:
   save_frequency: ${muldiv:${run.episodes},${run.steps},10}
   roi_mode: "cone"                 # @ui str cone  
-  device: cpu
-  start_with_model: False
-  use_previous_model: True
-  batch_size: 20
-  gamma: 0.7
+  start_with_model: False          # @ui bool
+  use_previous_model: True         # @ui bool
+  batch_size: 20                   # @ui int 1 100
+  gamma: 0.7                       # @ui float 0.0 1.0
   # Agents
   agent_0:
     agent_class: random_agent      # @ui str main_agent,rangom_agent,sb3_ppo_agent,sb3_a2c_agent
     architecture: 
-      reward: [RewardInference]
-      dynamic: NextState-NN
-      value: StateValue-NN
-      action: ModelBased
+      reward: [RewardInference]    # @ui str [RewardInference]
+      dynamic: NextState-NN        # @ui str None,NextState-NN
+      value: StateValue-NN         # @ui str None,StateValue-NN
+      action: ModelBased           # @ui str None,ModelBased
   # SB3 model parameters
   num_conv_layers: 0               # @ui int 0 3
   learning_rate: 0.0003            # @ui float 0.0001 0.01
