--- a/aintelope/config/example_config.yaml
+++ b/aintelope/config/example_config.yaml
@@ -8,14 +8,16 @@
 train:
   run:
     trials: 1
-    episodes: 10
-    steps: 10
+    experiment:
+      episodes: 10
+      steps: 10
   env_params:
     scores:
         FOOD_SCORE: '{"FOOD": 10}'
 
 test:
   run:
-    test_mode: True
+    experiment:
+      test_mode: True
 
 
